# GFM

./: .gitignore  README.md  bacasable.py  config.py  main_teacher.py  model_structure.txt  pyproject.toml  swin_model_structure.txt
configs/: simmim_pretrain__efficientnet_v2m_img192_100ep.yaml
data/: data_simmim.py
models/: teacher.py
